--- a/.github/workflows/deploy-to-ecr.yml
+++ b/.github/workflows/deploy-to-ecr.yml
@@ -2,7 +2,7 @@ name: Build and Push Docker Image to Amazon ECR
 
 on:
   push:
-    branches: [main]
+    branches: [mongo+docker]
 
 jobs:
   deploy:
