--- a/package.json
+++ b/package.json
@@ -1,28 +1,39 @@
 {
-  "name": "mini-app-01",
+  "name": "topjatt",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev -p 3000 -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.1.9",
+    "@mui/icons-material": "^5.15.21",
+    "@mui/material": "^5.15.21",
+    "@next/third-parties": "^15.0.3",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
+    "altcha": "^2.0.4",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.41.0",
+    "eslint-config-next": "^14.2.4",
     "mongodb": "^6.18.0",
-    "next": "15.3.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.2",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "next": "^15.0.3",
+    "next-seo": "^6.6.0",
+    "next-sitemap": "^4.2.3",
+    "postcss": "8.4.23",
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.6.5",
+    "react-toggle-dark-mode": "^1.1.1",
+    "sharp": "^0.33.5",
+    "tailwindcss": "3.3.2"
   }
 }
