--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://apkanwar:q1mjXanUkV1z3VJf@topjatttrades.poeupmz.mongodb.net/
+MONGODB_URI=mongodb+srv://apkanwar:q1mjXanUkV1z3VJf@topjatttrades.poeupmz.mongodb.net/trades?retryWrites=true&w=majority
 MONGODB_URI_LOCAL=mongodb://admin:password@mongo:27017/mydb
