--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-toggle-dark-mode": "^1.1.1",
     "sharp": "^0.33.5",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "yahoo-finance2": "^2.13.3"
   }
 }
