--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^1.7.14",
-    "@heroicons/react": "^2.0.18",
+    "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
@@ -32,6 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.5",
+    "react-sparklines": "^1.7.0",
     "react-toggle-dark-mode": "^1.1.1",
     "sharp": "^0.33.5",
     "tailwindcss": "3.3.2",
