--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "^14.2.4",
+    "lightweight-charts": "^5.0.8",
     "mongodb": "^6.18.0",
     "next": "^15.0.3",
     "next-seo": "^6.6.0",
@@ -34,6 +35,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-sparklines": "^1.7.0",
     "react-toggle-dark-mode": "^1.1.1",
+    "recharts": "^3.1.2",
     "sharp": "^0.33.5",
     "tailwindcss": "3.3.2",
     "yahoo-finance2": "^2.13.3"
