--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@vercel/speed-insights": "^1.2.0",
     "altcha": "^2.0.4",
     "autoprefixer": "10.4.14",
+    "bcryptjs": "^3.0.2",
     "eslint": "8.41.0",
     "eslint-config-next": "^14.2.4",
     "lightweight-charts": "^5.0.8",
     "mongodb": "^6.18.0",
     "next": "^15.0.3",
+    "next-auth": "^4.24.11",
     "next-seo": "^6.6.0",
     "next-sitemap": "^4.2.3",
     "postcss": "8.4.23",
