--- a/.github/workflows/deploy-to-ecr.yml
+++ b/.github/workflows/deploy-to-ecr.yml
@@ -6,12 +6,15 @@ on:
   pull_request:
     branches: [ "mongo+docker" ]
     types: [opened, synchronize, reopened]
+  pull_request_target:
+    branches: [ "mongo+docker" ]
+    types: [opened, synchronize, reopened]
   workflow_dispatch:
 
 permissions:
   contents: read
-  pull-requests: write
   issues: write
+  pull-requests: write
 
 jobs:
   build-and-deploy:
