--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGODB_URI=mongodb+srv://apkanwar:q1mjXanUkV1z3VJf@topjatttrades.poeupmz.mongodb.net/trades?retryWrites=true&w=majority
-MONGODB_URI_LOCAL=mongodb://admin:password@mongo:27017/mydb
+NEXTAUTH_SECRET='JQGU8ZzdhmTTrlAU2MBaW9godtUzU6Wnskno/osfJt0='
+NEXTAUTH_URL=http://localhost:3000
+# MONGODB_URI_LOCAL=mongodb://admin:password@mongo:27017/mydb
