--- a/.github/workflows/deploy-to-ecr.yml
+++ b/.github/workflows/deploy-to-ecr.yml
@@ -5,9 +5,20 @@ on:
     branches: [ "mongo+docker" ]
   pull_request:
     branches: [ "mongo+docker" ]
+  workflow_dispatch:
+    inputs:
+      deploy:
+        description: "Deploy to ECS after push? (yes/no)"
+        required: true
+        default: "yes"
+      extra_tag:
+        description: "Optional extra image tag to push (e.g. staging)"
+        required: false
 
 permissions:
   contents: read
+  issues: write
+  pull-requests: write
 
 jobs:
   build-and-deploy:
@@ -20,6 +31,7 @@ jobs:
       ECS_CLUSTER: ${{ secrets.ECS_CLUSTER }}
       ECS_SERVICE: ${{ secrets.ECS_SERVICE }}
       IMAGE_TAG: ${{ github.sha }}
+      EXTRA_TAG: ${{ github.event.inputs.extra_tag }}
 
     steps:
       - name: Checkout
@@ -39,7 +51,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build & Push (linux/amd64)
-        if: ${{ github.event_name == 'push' }}
+        if: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -48,6 +60,7 @@ jobs:
           tags: |
             ${{ env.REGISTRY }}:latest
             ${{ env.REGISTRY }}:${{ env.IMAGE_TAG }}
+            ${{ env.REGISTRY }}:${{ env.EXTRA_TAG }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -91,7 +104,7 @@ jobs:
             });
 
       - name: Force new ECS deployment
-        if: ${{ github.event_name == 'push' }}
+        if: ${{ github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.deploy == 'yes') }}
         run: |
           aws ecs update-service \
             --cluster "$ECS_CLUSTER" \
@@ -100,7 +113,7 @@ jobs:
             --region "$AWS_REGION"
 
       - name: Show deployment status
-        if: ${{ github.event_name == 'push' }}
+        if: ${{ github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.deploy == 'yes') }}
         run: |
           aws ecs describe-services \
             --cluster "$ECS_CLUSTER" \
