--- a/.github/workflows/deploy-to-ecr.yml
+++ b/.github/workflows/deploy-to-ecr.yml
@@ -31,7 +31,6 @@ jobs:
       ECS_CLUSTER: ${{ secrets.ECS_CLUSTER }}
       ECS_SERVICE: ${{ secrets.ECS_SERVICE }}
       IMAGE_TAG: ${{ github.sha }}
-      EXTRA_TAG: ${{ github.event.inputs.extra_tag }}
 
     steps:
       - name: Checkout
@@ -50,6 +49,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Docker meta (compute tags)
+        id: meta
+        if: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}
+          tags: |
+            type=raw,value=latest
+            type=sha
+            type=raw,value=${{ github.event.inputs.extra_tag }},enable=${{ github.event.inputs.extra_tag != '' }}
+
       - name: Build & Push (linux/amd64)
         if: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
         uses: docker/build-push-action@v6
@@ -57,10 +67,7 @@ jobs:
           context: .
           push: true
           platforms: linux/amd64
-          tags: |
-            ${{ env.REGISTRY }}:latest
-            ${{ env.REGISTRY }}:${{ env.IMAGE_TAG }}
-            ${{ env.REGISTRY }}:${{ env.EXTRA_TAG }}
+          tags: ${{ steps.meta.outputs.tags }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
