--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-sparklines": "^1.7.0",
     "react-toggle-dark-mode": "^1.1.1",
+    "react-tradingview-embed": "^3.0.6",
     "recharts": "^3.1.2",
     "sharp": "^0.33.5",
     "tailwindcss": "3.3.2",
