--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eslint-config-next": "^14.2.4",
     "lightweight-charts": "^5.0.8",
     "mongodb": "^6.18.0",
-    "next": "^16.0.10",
+    "next": "15.0.7",
     "next-auth": "^4.24.11",
     "next-seo": "^6.6.0",
     "next-sitemap": "^4.2.3",
